--- a/ansible/group_vars/lab/secrets.yml
+++ b/ansible/group_vars/lab/secrets.yml
@@ -1,5 +1,5 @@
-ansible_ssh_pass: password
-ansible_become_pass: password
-sonicadmin_user: admin
-sonicadmin_password: password
+ansible_become_pass: 123456
+ansible_ssh_pass: 123456
 sonicadmin_initial_password: password
+sonicadmin_password: password
+sonicadmin_user: admin
