--- a/ansible/group_vars/vm_host/main.yml
+++ b/ansible/group_vars/vm_host/main.yml
@@ -1,14 +1,19 @@
-supported_vm_types: [ "veos", "ceos", "vsonic" ]
-root_path: veos-vm
-vm_images_url: https://acsbe.blob.core.windows.net/vmimages
 cd_image_filename: Aboot-veos-serial-8.0.0.iso
 hdd_image_filename: vEOS-lab-4.20.15M.vmdk
-sonic_image_filename: sonic-vs.img
-skip_image_downloading: false
-
-vm_console_base: 7000
-memory: 2097152
 max_fp_num: 4
-
+memory: 2097152
 ptf_bp_ip: 10.10.246.254/24
 ptf_bp_ipv6: fc0a::ff/64
+root_path: veos-vm
+skip_image_downloading: true
+sonic_image_filename: sonic-vs.img
+supported_vm_types:
+- veos
+- ceos
+- vsonic
+vm_console_base: 7000
+vm_images_url: https://acsbe.blob.core.windows.net/vmimages
+# proxy
+proxy_env:
+  http_proxy: http://10.204.112.11:3128
+  https_proxy: http://10.204.112.11:3128
