--- a/ansible/fanout_connect.yml
+++ b/ansible/fanout_connect.yml
@@ -28,7 +28,5 @@
 
         - set_fact: connect_leaf=false
 
-        - include_tasks: roles/fanout/tasks/rootfanout_connect.yml
-          when: root_fanout_connect|bool == true
-
-        when: external_port is defined
+#        - include_tasks: roles/fanout/tasks/rootfanout_connect.yml
+#        when: external_port is defined
