--- a/ansible/vars/topo_t1.yml
+++ b/ansible/vars/topo_t1.yml
@@ -1,4 +1,9 @@
 topology:
+  disabled_host_interfaces:
+    - 30
+    - 31
+    - 32
+    - 33
   VMs:
     ARISTA01T2:
       vlans:
@@ -120,14 +125,7 @@ topology:
       vlans:
         - 29
       vm_offset: 29
-    ARISTA15T0:
-      vlans:
-        - 30
-      vm_offset: 30
-    ARISTA16T0:
-      vlans:
-        - 31
-      vm_offset: 31
+
 
 configuration_properties:
   common:
@@ -800,46 +798,5 @@ configuration:
       ipv4: 10.10.246.30/24
       ipv6: fc0a::3d/64
 
-  ARISTA15T0:
-    properties:
-    - common
-    - tor
-    tornum: 15
-    bgp:
-      asn: 64015
-      peers:
-        65100:
-        - 10.0.0.60
-        - FC00::79
-    interfaces:
-      Loopback0:
-        ipv4: 100.1.0.31/32
-        ipv6: 2064:100::1f/128
-      Ethernet1:
-        ipv4: 10.0.0.61/31
-        ipv6: fc00::7a/126
-    bp_interface:
-      ipv4: 10.10.246.31/24
-      ipv6: fc0a::3e/64
 
-  ARISTA16T0:
-    properties:
-    - common
-    - tor
-    tornum: 16
-    bgp:
-      asn: 64016
-      peers:
-        65100:
-        - 10.0.0.62
-        - FC00::7D
-    interfaces:
-      Loopback0:
-        ipv4: 100.1.0.32/32
-        ipv6: 2064:100::20/128
-      Ethernet1:
-        ipv4: 10.0.0.63/31
-        ipv6: fc00::7e/126
-    bp_interface:
-      ipv4: 10.10.246.32/24
-      ipv6: fc0a::41/64
+
