add brixia-fanout OS type

--- a/ansible/testbed-bristone2.yaml
+++ b/ansible/testbed-bristone2.yaml
@@ -52,6 +52,7 @@ devices:
         device_type: FanoutLeaf
         hwsku: Brixia
         alias:
+        os: sonic
         credentials:
             username: 
             password: 
